Update README with correct Java/JavaFX project structure and Maven configuration